2015-08-20  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pyx: use multiclass hinge loss.

	* deepnl/networkconv.pyx: fixed hinge calculation.

	* deepnl/math.pyx: revert to np.ndarray since memoryviews don't
	have max operator.

	* bin/dl-ner.py (main): SuffixExtractor.create() is just
	SuffixExtractor().

	* deepnl/sentiwords.pyx (train): invoke epoch_report().

	* deepnl/extractors.pyx (save_vocabulary): restored.

2015-08-16  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pxd ((l1_decay, l2_decay, momentum, adaRo,
	adaEps): training parameters declared as globals.

	* deepnl/trainer.pyx (Trainer.__init__): grouped optional parameters in
	single options dictionary.
	Network must be passed as argument, hence scripts dl-ner.py,
	dl-pos.py etc. have been modified to create it and then pass it,
	as well as to group options into dictionary.

	* bin/dl-ner.py (main): added argument vocab-size.

	* bin/dl-conv.py (main): grouped parser arguments.

	* bin/dl-ner.py (main): grouped parser arguments.

2015-08-15  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/network.pxd (Network): moved error to class Trainer.

2015-08-14  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/math.pyx: started moving to using Memoryviews.

	* deepnl/words.pyx (LmTrainer.update): call  nn.p.update().

	* deepnl/trainer.pyx (Trainer.update): use AdaGrad.

	* deepnl/network.pyx (Parameters.copy): added.

2015-08-13  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkconv.pyx: revised.

	* deepnl/network.pyx (Network.run): renamed to forward.
	* deepnl/networkconv.pyx (ConvolutionalNetwork.run): renamed to forward.

	* deepnl/networkconv.pyx: use multiclass hinge function.

2015-08-10  Giuseppe Attardi  <attardi@di.unipi.it>

	* deepnl/networkconv.pyx (ConvParameters): similar to Parameters.

	* deepnl/networkconv.pyx (ConvolutionaleNetwor): use ConvParameters field.

	* deepnl/networkseq.pyx (SeqParameters): added.
